Fixed blog images looking stretched
Doesn’t look awesome but much better

--- a/public/styles/less/home/home-main.less
+++ b/public/styles/less/home/home-main.less
@@ -190,8 +190,9 @@
         background: #ccc;
 
         img {
-          width: 100%;
-          height: 100%;
+          margin-left: auto;
+          margin-right: auto;
+          max-height: 129px;
         }
 
       }
